--- a/LyricsAverage/Views/Lyrics/Artist.cshtml
+++ b/LyricsAverage/Views/Lyrics/Artist.cshtml
@@ -4,29 +4,41 @@
     ViewData["Title"] = "View";
 }
 
-<h1>View</h1>
+<h1>@Html.DisplayFor(model => model.Artist)</h1>
 
 <div>
     <h4>AverageLyricsResponse</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.SongsAnalysed)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.SongsAnalysed)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.AverageWords)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.AverageWords)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.AverageDistinctWords)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.AverageDistinctWords)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.SongWithMostWords)
+        </dt>
+        <dd class="col-sm-10">
+            @Model.SongWithMostWords.Title (@Model.SongWithMostWords.WordCount.WordCount)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.SongWithFewestWords)
+        </dt>
+        <dd class="col-sm-10">
+            @Model.SongWithFewestWords.Title (@Model.SongWithFewestWords.WordCount.WordCount)
         </dd>
     </dl>
 </div>
