Add docker, tweak error handling

--- a/LyricsAverage/Views/Home/Index.cshtml
+++ b/LyricsAverage/Views/Home/Index.cshtml
@@ -6,8 +6,8 @@
     <h1 class="display-4">Enter Name of Artist</h1>
     <form asp-controller="Lyrics" asp-action="Artist" method="get">
         <p>
-            Enter Artist's Name: <input type="text" name="ArtistName">
-            <input type="submit" value="Search" required="true" />
+            Enter Artist's Name: <input type="text" name="ArtistName" required >
+            <input type="submit" value="Search"/>
         </p>
     </form>
 </div>
