--- a/LyricsAverage/Views/Lyrics/Artist.cshtml
+++ b/LyricsAverage/Views/Lyrics/Artist.cshtml
@@ -28,17 +28,23 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.AverageDistinctWords)
         </dd>
+        @if (@Model.SongWithMostWords != null)
+        {
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.SongWithMostWords)
         </dt>
         <dd class="col-sm-10">
             @Model.SongWithMostWords.Title (@Model.SongWithMostWords.WordCount.WordCount)
         </dd>
+        }
+        @if (@Model.SongWithFewestWords != null)
+        {
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.SongWithFewestWords)
         </dt>
         <dd class="col-sm-10">
             @Model.SongWithFewestWords.Title (@Model.SongWithFewestWords.WordCount.WordCount)
         </dd>
+        }
     </dl>
 </div>
