--- a/LyricsAverage/Views/Lyrics/Artist.cshtml
+++ b/LyricsAverage/Views/Lyrics/Artist.cshtml
@@ -7,7 +7,7 @@
 <h1>@Html.DisplayFor(model => model.Artist)</h1>
 
 <div>
-    <h4>AverageLyricsResponse</h4>
+    <h4>Average Lyrics Results:</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
